--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@next/mdx": "^14.0.4",
     "@tailwindcss/typography": "^0.5.4",
     "@vercel/analytics": "^1.3.1",
+    "@vercel/speed-insights": "^1.1.0",
     "autoprefixer": "^10.4.12",
     "cheerio": "^1.0.0-rc.12",
     "clsx": "^2.1.0",
